[tool.black]
line-length = 100
target-version = ['py37', 'py38']
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = "--full-trace -rxP"
testpaths = ["tests"]

[tool.isort]
profile="black"
line_length=100


[tool.poetry]
name = "pymine-net"
version = "0.1.0"
description = "Networking library for Minecraft in Python"
authors = ["PyMine-Net Developers & Contributors"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
mutf8 = "^1.0.6"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.1.0"
pytest = "^7.0.1"
colorama = "^0.4.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
